further fixes to modal navbar for mobile left aligned menu

--- a/css/modalmenu.css
+++ b/css/modalmenu.css
@@ -28,7 +28,7 @@
     font-size: 18px;
     border-bottom: 0;
     padding: 8px 0 5px;
-    margin: 8px 0;
+    margin: 12px 0;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #fff;
@@ -97,12 +97,13 @@
     list-style-type: none;
     color: white;
     background-color: #1658a5;
-    text-align: right;
+    text-align: left;
+    margin: -10px;
 
 }
 
 .dropdown-menu
 {
-    
+
 }
 
